ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glue-app
spec:
  rules:
    -  http:
        paths:
        - path: /database
          pathType: Prefix
          backend:
            service:
              name: glue-database-service
              port:
                name: http
        - path: /crawler
          pathType: Prefix
          backend:
            service:
              name: glue-crawler-service
              port:
                name: http
        - path: /connection
          pathType: Prefix
          backend:
            service:
              name: glue-connection-service
              port:
                name: http
        - path: /table
          pathType: Prefix
          backend:
            service:
              name: glue-table-service
              port:
                name: http
        - path: /job
          pathType: Prefix
          backend:
            service:
              name: glue-job-service
              port:
                name: http
